Add acommend to index file

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- The results of the requests section-->
         <div class="row myrow row-requests-bg">
             <div class="col-md12">
-                <div id="results">
+                <div id="results"><!-- Bug: if i put something, it appears only few milliseconds and disappears-->
                     In this place data will appear.
                 </div>
             </div>
